<resources>
    <string name="app_name">NewsApp</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_setting">Settings</string>
    <string name="text_subtitle">Name</string>
    <string name="lorem">Lorem</string>
    <string name="temp">Temperament</string>
    <string name="no_data">Nothing has been added to favorites</string>
    <string name="errorr">Sorry.. something wrong</string>
    <string name="favorite_title">Your Add Favorite</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_favorite">Favorite</string>
    <string name="image_description">image</string>
    <string name="desc">Description</string>
    <string name="publish">Publish</string>
    <string name="name">Name</string>

    <string name="header">Display</string>
    <string name="pref_key_dark">key_dark_mode</string>
    <string name="pref_dark_title">Dark mode</string>
    <string name="pref_dark_auto" translatable="false">auto</string>
    <string name="pref_dark_on" translatable="false">on</string>
    <string name="pref_dark_off" translatable="false">off</string>
    <string name="dark_mode_auto">Automatic</string>
    <string name="dark_mode_on">Dark mode</string>
    <string name="dark_mode_off">Light mode</string>
    <string name="Setting">Setting</string>
</resources>